--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "module": "commonjs",
+    "target": "es6",
+    "types": ["node"],
+    "moduleResolution": "node",
+    "esModuleInterop": true
+  }
 }
