--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.7",
     "@types/nodemailer": "^6.4.17",
