--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
@@ -21,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^7.0.4"
+    "multer": "^2.0.1",
+    "nodemailer": "^7.0.4",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -30,6 +33,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.7",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.10",
